[package]
name = "toml-configurator"
version = "0.2.1"
edition = "2024"
license = "Unlicense"
authors = ["Jack Hamilton jackham800@gmail.com"]
keywords = ["TOML", "CLI"]
categories = ["config"]
repository = "https://github.com/jackhamilton/configurator-rs"
description = "Creates and manages a config.toml based on a provided configuration struct."

[lib]
crate-type = ["lib"]

[dependencies]
freezable-trait = "~0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
toml = "0.9.4"
configurator-macros = { version = "~0", path = "../configurator-macros/" }
